fix header jumpoing on scroll

--- a/apps/web-ui/app/tailwind.css
+++ b/apps/web-ui/app/tailwind.css
@@ -6,6 +6,9 @@
   html {
     font-family: 'Inter var', 'Helvetica', system-ui, sans-serif;
   }
+  body {
+    padding-left: calc(100vw - 100%);
+  }
 }
 
 *[data-testid='underlay'] {
